# CLM

./: .gitignore  CLM.cc  CLM.h  CLMParameters.h  CLMTracker.cpp  CLMTracker.h  CMakeLists.txt  FCheck.cc  FCheck.h  IO.cc  IO.h  PAW.cc  PAW.h  PDM.cc  PDM.h  Patch.cc  Patch.h  PoseDetectorHaar.cpp  PoseDetectorHaar.h  PoseDetectorHaarParameters.h  SimpleCLM.cpp  TrackerCLM.cc  TrackerCLM.h
lib/local/CLM/model/: BU-4DFE-BaselPDM.txt  BU-4DFE-BaselSep.txt  clm.txt  colourPatchesV19_0.25.txt  colourPatchesV19_0.35.txt  colourPatchesV19_0.5.txt  depthPatchesV19_0.25.txt  depthPatchesV19_0.35.txt  depthPatchesV19_0.5.txt  faceCheckHuge.txt  main.txt  tris.txt
lib/local/Gavam/model/: ellipsoid.txt
